--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,81 @@ Library
 Logs
 obj
 Temp
-*.sln
-*.csproj
-*.pidb
-*.userprefs
-*.unityproj
-*.booproj
+Assembly-CSharp-Editor.csproj
+Assembly-CSharp.csproj
+Assembly-CSharp.Player.csproj 
+CFXR.WelcomeScreen.csproj 
+CFXRDemo.csproj 
+CFXRDemo.Player.csproj 
+CFXREditor.csproj 
+CFXRRuntime.csproj 
+CFXRRuntime.Player.csproj 
+KinoBloom.Runtime.csproj 
+KinoBloom.Runtime.Player.csproj 
+PPv2URPConverters.csproj 
+Remake Archero.sln 
+ToonyColorsPro.Demo.Editor.csproj 
+Unity.2D.Sprite.Editor.csproj 
+Unity.2D.Tilemap.Editor.csproj 
+Unity.2D.Tilemap.Extras.csproj 
+Unity.2D.Tilemap.Extras.Editor.csproj 
+Unity.2D.Tilemap.Extras.Player.csproj 
+Unity.Burst.CodeGen.csproj 
+Unity.Burst.csproj 
+Unity.Burst.Editor.csproj 
+Unity.Burst.Player.csproj 
+Unity.CollabProxy.Editor.csproj 
+Unity.EditorCoroutines.Editor.csproj 
+Unity.Mathematics.csproj 
+Unity.Mathematics.Editor.csproj 
+Unity.Mathematics.Player.csproj 
+Unity.Performance.Profile-Analyzer.Editor.csproj 
+Unity.PlasticSCM.Editor.csproj 
+Unity.RenderPipeline.Universal.ShaderLibrary.csproj 
+Unity.RenderPipeline.Universal.ShaderLibrary.Player.csproj 
+Unity.RenderPipelines.Core.Editor.csproj 
+Unity.RenderPipelines.Core.Runtime.csproj 
+Unity.RenderPipelines.Core.Runtime.Player.csproj 
+Unity.RenderPipelines.Core.ShaderLibrary.csproj 
+Unity.RenderPipelines.Core.ShaderLibrary.Player.csproj 
+Unity.RenderPipelines.ShaderGraph.ShaderGraphLibrary.csproj 
+Unity.RenderPipelines.ShaderGraph.ShaderGraphLibrary.Player.csproj 
+Unity.RenderPipelines.Universal.Editor.csproj 
+Unity.RenderPipelines.Universal.Runtime.csproj 
+Unity.RenderPipelines.Universal.Runtime.Player.csproj 
+Unity.RenderPipelines.Universal.Shaders.csproj 
+Unity.RenderPipelines.Universal.Shaders.Player.csproj 
+Unity.Rider.Editor.csproj 
+Unity.Searcher.Editor.csproj 
+Unity.Services.Core.Analytics.csproj 
+Unity.Services.Core.Analytics.Player.csproj 
+Unity.Services.Core.Configuration.csproj 
+Unity.Services.Core.Configuration.Editor.csproj 
+Unity.Services.Core.Configuration.Player.csproj 
+Unity.Services.Core.csproj 
+Unity.Services.Core.Device.csproj 
+Unity.Services.Core.Device.Player.csproj 
+Unity.Services.Core.Editor.csproj 
+Unity.Services.Core.Environments.csproj 
+Unity.Services.Core.Environments.Internal.csproj 
+Unity.Services.Core.Environments.Internal.Player.csproj 
+Unity.Services.Core.Environments.Player.csproj 
+Unity.Services.Core.Internal.csproj 
+Unity.Services.Core.Internal.Player.csproj 
+Unity.Services.Core.Networking.csproj 
+Unity.Services.Core.Networking.Player.csproj 
+Unity.Services.Core.Player.csproj 
+Unity.Services.Core.Registration.csproj 
+Unity.Services.Core.Registration.Player.csproj 
+Unity.Services.Core.Scheduler.csproj 
+Unity.Services.Core.Scheduler.Player.csproj 
+Unity.Services.Core.Telemetry.csproj 
+Unity.Services.Core.Telemetry.Player.csproj 
+Unity.Services.Core.Threading.csproj 
+Unity.Services.Core.Threading.Player.csproj 
+Unity.Settings.Editor.csproj 
+Unity.ShaderGraph.Editor.csproj 
+Unity.ShaderGraph.Utilities.csproj 
+Unity.TestTools.CodeCoverage.Editor.csproj 
+Unity.TestTools.CodeCoverage.Editor.OpenCover.Model.csproj 
+Unity.TestTools.CodeCoverage.Editor.OpenCover.Mono.Reflection.csproj Unity.TextMeshPro.csproj Unity.TextMeshPro.Editor.csproj Unity.TextMeshPro.Player.csproj Unity.Timeline.csproj Unity.Timeline.Editor.csproj Unity.Timeline.Player.csproj Unity.VisualScripting.Core.csproj Unity.VisualScripting.Core.Editor.csproj Unity.VisualScripting.Core.Player.csproj Unity.VisualScripting.Flow.csproj Unity.VisualScripting.Flow.Editor.csproj Unity.VisualScripting.Flow.Player.csproj Unity.VisualScripting.SettingsProvider.Editor.csproj Unity.VisualScripting.Shared.Editor.csproj Unity.VisualScripting.State.csproj Unity.VisualScripting.State.Editor.csproj Unity.VisualScripting.State.Player.csproj Unity.VisualStudio.Editor.csproj Unity.VSCode.Editor.csproj UnityEditor.TestRunner.csproj UnityEditor.UI.csproj UnityEngine.TestRunner.csproj UnityEngine.TestRunner.Player.csproj UnityEngine.UI.csproj UnityEngine.UI.Player.csproj
