--- a/.gitignore
+++ b/.gitignore
@@ -79,4 +79,29 @@ Unity.ShaderGraph.Editor.csproj
 Unity.ShaderGraph.Utilities.csproj 
 Unity.TestTools.CodeCoverage.Editor.csproj 
 Unity.TestTools.CodeCoverage.Editor.OpenCover.Model.csproj 
-Unity.TestTools.CodeCoverage.Editor.OpenCover.Mono.Reflection.csproj Unity.TextMeshPro.csproj Unity.TextMeshPro.Editor.csproj Unity.TextMeshPro.Player.csproj Unity.Timeline.csproj Unity.Timeline.Editor.csproj Unity.Timeline.Player.csproj Unity.VisualScripting.Core.csproj Unity.VisualScripting.Core.Editor.csproj Unity.VisualScripting.Core.Player.csproj Unity.VisualScripting.Flow.csproj Unity.VisualScripting.Flow.Editor.csproj Unity.VisualScripting.Flow.Player.csproj Unity.VisualScripting.SettingsProvider.Editor.csproj Unity.VisualScripting.Shared.Editor.csproj Unity.VisualScripting.State.csproj Unity.VisualScripting.State.Editor.csproj Unity.VisualScripting.State.Player.csproj Unity.VisualStudio.Editor.csproj Unity.VSCode.Editor.csproj UnityEditor.TestRunner.csproj UnityEditor.UI.csproj UnityEngine.TestRunner.csproj UnityEngine.TestRunner.Player.csproj UnityEngine.UI.csproj UnityEngine.UI.Player.csproj
+Unity.TestTools.CodeCoverage.Editor.OpenCover.Mono.Reflection.csproj 
+Unity.TextMeshPro.csproj 
+Unity.TextMeshPro.Editor.csproj 
+Unity.TextMeshPro.Player.csproj 
+Unity.Timeline.csproj 
+Unity.Timeline.Editor.csproj 
+Unity.Timeline.Player.csproj 
+Unity.VisualScripting.Core.csproj 
+Unity.VisualScripting.Core.Editor.csproj 
+Unity.VisualScripting.Core.Player.csproj 
+Unity.VisualScripting.Flow.csproj 
+Unity.VisualScripting.Flow.Editor.csproj 
+Unity.VisualScripting.Flow.Player.csproj 
+Unity.VisualScripting.SettingsProvider.Editor.csproj 
+Unity.VisualScripting.Shared.Editor.csproj 
+Unity.VisualScripting.State.csproj 
+Unity.VisualScripting.State.Editor.csproj 
+Unity.VisualScripting.State.Player.csproj 
+Unity.VisualStudio.Editor.csproj 
+Unity.VSCode.Editor.csproj 
+UnityEditor.TestRunner.csproj 
+UnityEditor.UI.csproj 
+UnityEngine.TestRunner.csproj 
+UnityEngine.TestRunner.Player.csproj 
+UnityEngine.UI.csproj 
+UnityEngine.UI.Player.csproj
